crates/rome_js_formatter/tests/specs/prettier/js/v8_intrinsic/avoid-conflicts-to-pipeline.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: avoid-conflicts-to-pipeline.js

---
# Input
```js
// |>
const status = %GetOptimizationStatus(fn);

```

# Output
```js
// |>
const status = %GetOptimizationStatus(fn);

```

# Errors
```
error[SyntaxError]: Expected an expression for the left hand side of the `%` operator.
  ┌─ avoid-conflicts-to-pipeline.js:2:16
  │
2 │ const status = %GetOptimizationStatus(fn);
  │                ^ This operator requires a left hand side value


```


